# boss-rc500-editor

./: .gitignore  Boss-rc500-assign.ui  Boss-rc500-copy.ui  Boss-rc500-system.ui  Boss-rc500.ui  CMakeLists.txt  LICENSE  README.md  conanfile.txt  ihm.ui
doc/: Assign target min max.txt  index.html  tooltips.html
docs/: .htaccess  README.md  index.html
docs/fr/: README.md
manuals/: Beat-Pattern.ods
resources/: configuration.yaml  lookup.yaml  resources.qrc
resources/ROLAND/DATA/: MEMORY2.RC0
resources/images/: BossRc500.rc
resources/interfaces/: Boss-rc500-assign.ui  Boss-rc500.ui
resources/presets/: README.txt
resources/templates/: MEMORY.txt  MEMORY1.RC0  MEMORY_DEFAULT.RC0  SYSTEM.txt  SYSTEM1.RC0
resources/themes/: Default.css  GT1000.css
resources/tooltips/: assign_assign.yaml  assign_source.yaml  assign_sourcemode.yaml  assign_target.yaml  assign_targetminmax.yaml  control_exp.yaml  control_pdlctl.yaml  general_displaycontrast.yaml  loopfx_flick.yaml  loopfx_loopfx.yaml  loopfx_reptlen.yaml  loopfx_scatlen.yaml  loopfx_shift.yaml  loopfx_type.yaml  master_play_allstart.yaml  master_play_fadetime.yaml  master_play_level.yaml  master_play_playmode.yaml  master_play_singlchange.yaml  master_play_trkchain.yaml  master_rec_arecsens.yaml  master_rec_arecsrc.yaml  master_rec_autorec.yaml  master_rec_dubmode.yaml  master_rec_looplength.yaml  master_rec_quantize.yaml  master_rec_recaction.yaml  rhythm_beat.yaml  rhythm_fill.yaml  rhythm_kit.yaml  rhythm_level.yaml  rhythm_part14.yaml  rhythm_pattern.yaml  rhythm_playcount.yaml  rhythm_reccount.yaml  rhythm_reverb.yaml  rhythm_start.yaml  rhythm_stop.yaml  rhythm_tonehigh.yaml  rhythm_tonelow.yaml  (+16 more)
sources/: WidgetGallery.cpp  WidgetGallery.hpp  boss-looper.cpp  rc500-reader.cpp  xml-reader.cpp
sources/BossRc500/: BossRc500.cpp  BossRc500.hpp  BossRc500AdvancedCopyDialog.cpp  BossRc500AdvancedCopyDialog.hpp  BossRc500AssignDialog.cpp  BossRc500AssignDialog.hpp  BossRc500Commands.cpp  BossRc500Commands.hpp  BossRc500MainDialog.cpp  BossRc500MainDialog.hpp  BossRc500MainWindow.cpp  BossRc500MainWindow.hpp  BossRc500SystemDialog.cpp  BossRc500SystemDialog.hpp  BossReaderWriter.cpp  CMakeLists.txt  Dialog.hpp  DialogBoss.cpp  DialogBoss.hpp  main.cpp
sources/BossRc500-MemoryCopy/: BossReaderWriter.hpp  CMakeLists.txt  Dialog.hpp  DialogBoss.cpp  DialogBoss.hpp  main.cpp
sources/BossRc500/Designer/: Boss-rc500-assign.ui  Boss-rc500-copy.ui  Boss-rc500-main.ui  Boss-rc500-system.ui  Boss-rc500-text.ui  Dialog.hpp  DialogAssign.hpp  DialogSystem.hpp  ui_Boss-rc500-assign.h  ui_Boss-rc500-copy.h  ui_Boss-rc500-main.h  ui_Boss-rc500-system.h  ui_Boss-rc500-text.h
sources/BossReaderWriter/: BossReaderWriter.cpp  BossReaderWriter.hpp  CMakeLists.txt
sources/WidgetExamples/: CMakeLists.txt  WidgetGallery.cpp  WidgetMain.cpp
sources/miniaudio/: CMakeLists.txt
sources/xml-reader/: CMakeLists.txt  xml-reader.cpp
templates/: MEMORY.txt  SYSTEM1.RC0
